--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -1,3 +1,7 @@
+<form class="form-inline">
+        <input name="searchInput" class="form-control"  placeholder="Search" #searchInput="ngModel"  [(ngModel)]="searchText" style="width: 80%;">
+        <button class="btn btn-outline-primary"  (click)="searchText=''">x</button>
+</form>
 <table class="table table-sm">
   <thead>
     <th>First Name</th>
@@ -7,15 +11,16 @@
     <th></th>
   </thead>
   <ng-container *ngFor="let customer of customerArray">
-    <tr class="table-dark">
+    <tr class="table-dark" *ngIf ="filterCondition(customer)">
       <td>{{customer.firstName}}</td>
       <td>{{customer.lastName}}</td>
       <td>{{customer.mobile}}</td>
       <td>{{customer.email}}</td>
       <td>
-        <button class="btn btn-info">Edit</button>
-        <button class="btn btn-danger">Delete</button>
+        <button class="btn btn-info" (click)="customerService.populateForm(customer)">Edit</button>
+        <button class="btn btn-danger" (click)="onDelete(customer.$key)">Delete</button>
       </td>
     </tr>
   </ng-container>
 </table>
+<div class="alert alert-danger" *ngIf="showDeletedMessage">Deleted successfully</div>
