--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-
 <div class="container">
- <app-customer></app-customer>
+  <app-navbar></app-navbar>
+  <!--  <app-customer></app-customer> -->
+  <router-outlet></router-outlet>
 </div>
