--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-5">
+<div class="row p-3">
+  <div class="col-lg-5 col-md-12 col-sm-12">
     <form [formGroup]="this.customerService.form" (ngSubmit)="onSubmit()">
       <input type="hidden" formControlName="$key">
       <div class="form-group">
@@ -31,14 +31,14 @@
         <div class="invalid-feedback" *ngIf="submitted && formControls.address.errors">This field is required</div>
       </div>
       <div class="form-group">
-        <input type="submit" class="btn btn-primary" value="Submit">
+        <input type="submit" class="btn btn-primary" style="background-color: #093F5E;" value="Submit">
       </div>
     </form>
     <div class="alert alert-info" *ngIf="showSuccessMessage">
       submitted successfully.
     </div>
   </div>
-  <div class="col-md-7">
+  <div class="col-lg-7 col-md-12 col-sm-12">
     <app-customer-list></app-customer-list>
   </div>
 </div>
